non-msrv-tests/tests/ui/zeroize/wrong_option_syntax.stderr
error: unexpected option syntax
 --> tests/ui/zeroize/wrong_option_syntax.rs:2:24
  |
2 | #[derive_where(Zeroize(crate(zeroize_)); T)]
  |                        ^^^^^^^^^^^^^^^
